--- a/n-Discretization.ipynb
+++ b/n-Discretization.ipynb
@@ -5,6 +5,14 @@
    "metadata": {},
    "source": [
     "# MountainCar-v0: Discretization\n",
+    "\n",
+    "*Contact: Nagender Aneja, naneja@gmail.com, http://researchid.co/naneja"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "https://github.com/openai/gym/wiki/MountainCar-v0"
    ]
   },
